# fleetidy

./: README-dot-lookup.md  README.md  app.html  census.html  commodities.html  config.yaml  fred_dashboard.html  fred_data.js  fred_postgres.py  fred_scores.csv  fred_scores.db  index.html  iss_estimator.py  light_jump_game.py  package.json  pyproject.toml  record-detail.html  requirements.txt  server.js  server.py  thank-you.html  underwriting-dashboard.html  white-paper.html
assets/: logo2.dfr
css/: app.js  forms.css  tailwind.css
js/: app-form.js  main.js  record-detail.js  tailwind-config.js  uw-dashboard.js
